--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ span {
     background-color: var(--window-background-color);
 }
 
-.bl_bar {
+.bl_windowBar {
     width: 100%;
     height: 35px;
     border-bottom: 1px solid #888888;
@@ -125,7 +125,7 @@ span {
     align-items: center;
 }
 
-.bl_bar_inner {
+.bl_windowBar_inner {
     margin-left: 15px;
 }
 
