--- a/style.css
+++ b/style.css
@@ -1,156 +1,156 @@
 @charset "utf-8";
 
 :root {
-    --text-color: #222222;
-    --background-color: #efefef;
-    --window-background-color: #21212b;
-    --window-inner-background-color: #282a36;
-  }
+  --text-color: #222222;
+  --background-color: #efefef;
+  --window-background-color: #21212b;
+  --window-inner-background-color: #282a36;
+}
 
 body {
-    font-family: 'Roboto', sans-serif;
-    color: var(--text-color);
-    background-color: var(--background-color);
-    margin: 0;
-    transition: all  0.5s ease;
+  font-family: "Roboto", sans-serif;
+  color: var(--text-color);
+  background-color: var(--background-color);
+  margin: 0;
+  transition: all 0.5s ease;
 }
 
 h1 {
-    margin: 0;
+  margin: 0;
 }
 
 a {
-    color: var(--text-color);
-    text-decoration: none;
-    transition: all  0.5s ease;
+  color: var(--text-color);
+  text-decoration: none;
+  transition: all 0.5s ease;
 }
 
 button {
-    border: none;
-    cursor: pointer;
+  border: none;
+  cursor: pointer;
 }
 
 span {
-	display:inline-block;
+  display: inline-block;
 }
 
 .un_topAnimation {
-    height: 100%;
-    width: 100%;
-    background-color: var(--background-color);
-    position: fixed;
-    z-index: 1;
+  height: 100%;
+  width: 100%;
+  background-color: var(--background-color);
+  position: fixed;
+  z-index: 1;
 }
 
 .un_topAnimation_bg {
-    height: 100%;
-    width: 100%;
-    background-color: #222222;
-    position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: #222222;
+  position: fixed;
 }
 
 .un_topAnimation_ttl {
-    position: relative;
-    text-align: center;
-    color: #ffffff;
-    font-size: 2.25rem;
-    text-transform: uppercase;
-    top: 50%;
-    transform: translateY(-50%);
-    overflow: hidden;
+  position: relative;
+  text-align: center;
+  color: #ffffff;
+  font-size: 2.25rem;
+  text-transform: uppercase;
+  top: 50%;
+  transform: translateY(-50%);
+  overflow: hidden;
 }
 
 .ttl {
-    text-align: center;
-    font-family: 'Press Start 2P', cursive;
-    font-size: 2.25rem;
-    white-space: nowrap;
-    text-transform: uppercase;
+  text-align: center;
+  font-family: "Press Start 2P", cursive;
+  font-size: 2.25rem;
+  white-space: nowrap;
+  text-transform: uppercase;
 }
 
 .ly_ttl {
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translateX(-50%);
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .sub_ttl {
-    text-align: center;
-    font-size: 1.75rem;
-    white-space: nowrap;
+  text-align: center;
+  font-size: 1.75rem;
+  white-space: nowrap;
 }
 
 .ly_sub_ttl {
-    position: absolute;
-    top: 56.5%;
-    left: 50%;
-    transform: translateX(-50%);
+  position: absolute;
+  top: 56.5%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .bl_menue_wrapper {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 2.5%;
-    padding-bottom: 0.5rem;
-    border-bottom: 3px solid var(--text-color);
+  display: flex;
+  justify-content: space-between;
+  padding: 0 2.5%;
+  padding-bottom: 0.5rem;
+  border-bottom: 3px solid var(--text-color);
 }
 
 .ly_menue_wrapper {
-    width: 40%;
-    position: absolute;
-    top: 92.5%;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: all  0.5s ease;
+  width: 40%;
+  max-width: 450px;
+  position: absolute;
+  top: 92.5%;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: all 0.5s ease;
 }
 
 .el_menue {
-    font-size: 50px;
-    color: var(--text-color);
-    background-color: var(--background-color);
-    transition: all  0.5s ease;
+  font-size: 50px;
+  color: var(--text-color);
+  background-color: var(--background-color);
+  transition: all 0.5s ease;
 }
 
 .bl_window {
-    position: absolute;
-    border-radius: 5px;
-    background-color: var(--window-background-color);
+  position: absolute;
+  border-radius: 5px;
+  background-color: var(--window-background-color);
 }
 
 .bl_windowBar {
-    width: 100%;
-    height: 35px;
-    border-bottom: 1px solid #888888;
-    display: flex;
-    align-items: center;
+  width: 100%;
+  height: 35px;
+  border-bottom: 1px solid #888888;
+  display: flex;
+  align-items: center;
 }
 
 .bl_windowBar_inner {
-    margin-left: 15px;
+  margin-left: 15px;
 }
 
 .bl_window_inner {
-    width: 75%;
-    height: calc(100% - 50px);
-    background-color: var(--window-inner-background-color);
-    margin: 0 0 auto auto;
+  width: 75%;
+  height: calc(100% - 50px);
+  background-color: var(--window-inner-background-color);
+  margin: 0 0 auto auto;
 }
 
 .el_window_button {
-    background-color: rgba(0, 0, 0, 0);
-    font-size: 20px;
+  background-color: rgba(0, 0, 0, 0);
+  font-size: 20px;
 }
 
 .hp_red {
-    color: #ff0000;
+  color: #ff0000;
 }
 
 .hp_yellow {
-    color: #ffff00;
+  color: #ffff00;
 }
 
-
 .hp_green {
-    color: #00ff00;
+  color: #00ff00;
 }
