--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   --background-color: #efefef;
   --window-background-color: #21212b;
   --window-inner-background-color: #282a36;
+  --window-text-color: #efefef;
 }
 
 body {
@@ -23,6 +24,10 @@ a {
   color: var(--text-color);
   text-decoration: none;
   transition: all 0.5s ease;
+}
+
+p {
+  margin: 0;
 }
 
 button {
@@ -88,15 +93,8 @@ span {
   transform: translateX(-50%);
 }
 
-.bl_menue_wrapper {
+.ly_menu {
   display: flex;
-  justify-content: space-between;
-  padding: 0 2.5%;
-  padding-bottom: 0.5rem;
-  border-bottom: 3px solid var(--text-color);
-}
-
-.ly_menue_wrapper {
   width: 40%;
   max-width: 450px;
   position: absolute;
@@ -106,41 +104,106 @@ span {
   transition: all 0.5s ease;
 }
 
-.el_menue {
+.bl_menu {
+  justify-content: space-between;
+  padding: 0 2.5%;
+  padding-bottom: 0.5rem;
+  border-bottom: 3px solid var(--text-color);
+}
+
+.el_menuItem {
   font-size: 50px;
   color: var(--text-color);
   background-color: var(--background-color);
   transition: all 0.5s ease;
 }
 
-.bl_window {
+.ly_window {
   position: absolute;
+}
+
+.bl_window {
   border-radius: 5px;
   background-color: var(--window-background-color);
 }
 
-.bl_windowBar {
+.ly_windowBar {
   width: 100%;
   height: 35px;
+}
+
+.bl_windowBar {
   border-bottom: 1px solid #888888;
   display: flex;
   align-items: center;
 }
 
-.bl_windowBar_inner {
-  margin-left: 15px;
-}
-
-.bl_window_inner {
-  width: 75%;
-  height: calc(100% - 50px);
-  background-color: var(--window-inner-background-color);
-  margin: 0 0 auto auto;
-}
-
 .el_window_button {
   background-color: rgba(0, 0, 0, 0);
   font-size: 20px;
+}
+
+.ly_window_inner {
+  height: calc(100% - 50px);
+}
+
+.bl_window_inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.ly_windowMenu {
+  width: 25%;
+}
+
+.bl_windowMenu {
+  padding: 15px;
+}
+
+.ly_windowMenuItem {
+  width: 100%;
+}
+
+.el_windowMenuItem {
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  color: var(--window-text-color);
+  background-color: var(--window-background-color);
+  padding: 5px 15px;
+}
+
+.el_windowMenuItem:hover {
+  background-color: var(--window-inner-background-color);
+}
+
+.el_windowMenuItem > p {
+  margin-left: 5px;
+}
+
+.ly_windowBody {
+  width: 75%;
+}
+
+.bl_windowBody {
+  padding: 15px;
+  background-color: var(--window-inner-background-color);
+  border-bottom-left-radius: 5px;
+}
+
+.bl_snsWindowBody {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.bl_snsWindowBodyItem {
+  color: var(--window-text-color);
+  text-align: center;
+}
+
+.bl_snsWindowBodyItem > i {
+  font-size: 50px;
 }
 
 .hp_red {
