--- a/style.css
+++ b/style.css
@@ -111,15 +111,13 @@ span {
   border-bottom: 3px solid var(--text-color);
 }
 
-.ly_menuItem {
-  width: fit-content;
-}
-
 .el_menuItem {
   font-size: 50px;
   color: var(--text-color);
   background-color: var(--background-color);
   transition: all 0.5s ease;
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 .ly_window {
