--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ span {
   transition: all 0.5s ease;
   appearance: none;
   -webkit-appearance: none;
-  width: fit-content;
+  padding: 0;
 }
 
 .ly_window {
