--- a/style.css
+++ b/style.css
@@ -252,6 +252,17 @@ span {
   min-width: 12.5%;
 }
 
+.ly_errorWindowBody {
+  width: 100%;
+}
+
+.bl_errorWindowBody {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .hp_red {
   color: #ff0000;
 }
